# music_scheduler

./: .gitignore  .gitmodules  readme.md  todo.md  todo.txt
client/: CMakeLists.txt  client.py  configuration.h  errors.h  pmpc.ui  pmpc_client.cpp  pmpc_client.h  pmpc_main.cpp  pmpc_mainwindow.cpp  pmpc_mainwindow.h  pyclient.py  resources.qrc  rrplayer.ui  rrplayer_client.cpp  rrplayer_client.h  rrplayer_main.cpp  rrplayer_mainwindow.cpp  rrplayer_mainwindow.h  yousched.ui
server/: error.py  example-musicplayer.py  scheduler.py  server.py  test_scheduler.py  test_server.py
